fix: uncommented dark mode on svelte

--- a/apps/svelte-app/src/app.css
+++ b/apps/svelte-app/src/app.css
@@ -39,7 +39,7 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-/* .dark {
+.dark {
   --background: #0f111a;
   --foreground: #d2dbf3;
   --card: #212437;
@@ -71,7 +71,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-} */
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
